<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="https://schemas.android.com/apk/res/android"
>
    <item
        android:icon="@drawable/sort"
        android:title =""
        app:showAsAction="always">


        <item
            android:id = "@+id/popular"
            android:title="@string/Popular"
            app:showAsAction = "never"
            android:orderInCategory="2"/>
        <item
            android:id = "@+id/rating"
            android:title="@string/Rating"
            app:showAsAction = "never"
            android:orderInCategory="3"
            />
        <item
            android:id = "@+id/favr"
            android:title="@string/favs"
            app:showAsAction = "never"
            android:orderInCategory="3"
            />


    </item>
</menu>