<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:layout="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout
android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:background="@color/sky"
            android:minHeight="160dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/backdrop"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/moviename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:text="Intersteller" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frame"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/posterimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="10dp"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"
                tools:src="@drawable/blankstar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:paddingTop="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    tools:text="2014" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />


                <include layout="@layout/stars" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />


                <ImageView
                    android:id="@+id/fav"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/heart_off"
                    tools:ignore="ContentDescription"

                    />


                <Button
                    android:id="@+id/button_watch_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:enabled="true"
                    android:text="@string/trailers"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:theme="@style/Button.ColorPrimary"
                    tools:text="watch trailer" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/lasttext"
            android:layout_width="match_parent"
            android:layout_below="@id/line1"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            tools:text="Interstellar chronicles the adventures of a group of explorers who make use of a newly discovered wormhole to surpass the limitations on human space travel and conquer the vast distances involved in an interstellar voyage." />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/lasttext"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/black" />
        <TextView
            android:id="@+id/trail"
            android:layout_width="wrap_content"
            android:layout_below="@id/view"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/trailersrec" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailerrecycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:layout_below="@id/trail"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="322dp">

        </android.support.v7.widget.RecyclerView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <TextView
            android:id="@+id/rev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailerrecycle"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/rev" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <android.support.v7.widget.RecyclerView
            android:layout_below="@id/rev"
            android:id="@+id/reviewrecycle"
            android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:ignore="MissingConstraints"
            >
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
</ScrollView>